@@ -29,6 +29,7 @@ import java.util.concurrent.BlockingQueue;
 import java.util.concurrent.PriorityBlockingQueue;
 import java.util.concurrent.LinkedBlockingQueue;
 import java.util.concurrent.TimeUnit;
+import java.util.concurrent.locks.ReentrantReadWriteLock;
 
 import org.slf4j.Logger;
 import org.slf4j.LoggerFactory;
@@ -51,9 +52,11 @@ import org.apache.hedwig.protoextensions.PubSubResponseUtils;
 import org.apache.hedwig.server.common.ServerConfiguration;
 import org.apache.hedwig.server.common.UnexpectedError;
 import org.apache.hedwig.server.netty.ServerStats;
+import org.apache.hedwig.server.persistence.CancelScanRequest;
 import org.apache.hedwig.server.persistence.Factory;
 import org.apache.hedwig.server.persistence.MapMethods;
 import org.apache.hedwig.server.persistence.PersistenceManager;
+import org.apache.hedwig.server.persistence.ReadAheadCache;
 import org.apache.hedwig.server.persistence.ScanCallback;
 import org.apache.hedwig.server.persistence.ScanRequest;
 import org.apache.hedwig.util.Callback;
@@ -108,7 +111,8 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
      */
     Map<TopicSubscriber, ActiveSubscriberState> subscriberStates;
 
-    private PersistenceManager persistenceMgr;
+    private final ReadAheadCache cache;
+    private final PersistenceManager persistenceMgr;
 
     private ServerConfiguration cfg;
 
@@ -123,6 +127,11 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
 
     public FIFODeliveryManager(PersistenceManager persistenceMgr, ServerConfiguration cfg) {
         this.persistenceMgr = persistenceMgr;
+        if (persistenceMgr instanceof ReadAheadCache) {
+            this.cache = (ReadAheadCache) persistenceMgr;
+        } else {
+            this.cache = null;
+        }
         perTopicDeliveryPtrs = new HashMap<ByteString, SortedMap<Long, Set<ActiveSubscriberState>>>();
         subscriberStates = new HashMap<TopicSubscriber, ActiveSubscriberState>();
         workerThread = new Thread(this, "DeliveryManagerThread");
@@ -208,7 +217,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
                                       SubscriptionEvent event,
                                       Callback<Void> cb, Object ctx) {
         ActiveSubscriberState subState =
-            subscriberStates.get(new TopicSubscriber(topic, subscriberId));
+            subscriberStates.remove(new TopicSubscriber(topic, subscriberId));
 
         if (subState != null) {
             stopServingSubscriber(subState, event, cb, ctx);
@@ -396,7 +405,8 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         MapMethods.addToMultiMap(deliveryPtrs, seqId, subscriber, HashMapSubscriberFactory.instance);
     }
 
-    public class ActiveSubscriberState implements ScanCallback, DeliveryCallback, DeliveryManagerRequest {
+    public class ActiveSubscriberState
+        implements ScanCallback, DeliveryCallback, DeliveryManagerRequest, CancelScanRequest {
 
         static final int UNLIMITED = 0;
 
@@ -404,6 +414,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         ByteString subscriberId;
         long lastLocalSeqIdDelivered;
         boolean connected = true;
+        ReentrantReadWriteLock connectedLock = new ReentrantReadWriteLock();
         DeliveryEndPoint deliveryEndPoint;
         long lastScanErrorTime = -1;
         long localSeqIdDeliveringNow;
@@ -414,6 +425,10 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         ServerMessageFilter filter;
         Callback<Void> cb;
         Object ctx;
+
+        // track the outstanding scan request
+        // so we could cancel it
+        ScanRequest outstandingScanRequest;
 
         final static int SEQ_ID_SLACK = 10;
 
@@ -444,11 +459,23 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         }
 
         public void setNotConnected(SubscriptionEvent event) {
-            // have closed it.
-            if (!isConnected()) {
-                return;
+            this.connectedLock.writeLock().lock();
+            try {
+                // have closed it.
+                if (!connected) {
+                    return;
+                }
+                this.connected = false;
+                // put itself in ReadAhead queue to cancel outstanding scan request
+                // if outstanding scan request callback before cancel op executed,
+                // nothing it would cancel.
+                if (null != cache && null != outstandingScanRequest) {
+                    cache.cancelScanRequest(topic, this);
+                }
+            } finally {
+                this.connectedLock.writeLock().unlock();
             }
-            this.connected = false;
+
             if (null != event &&
                 (SubscriptionEvent.TOPIC_MOVED == event ||
                  SubscriptionEvent.SUBSCRIPTION_FORCED_CLOSED == event)) {
@@ -500,7 +527,12 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         }
 
         protected boolean isConnected() {
-            return connected;
+            connectedLock.readLock().lock();
+            try {
+                return connected;
+            } finally {
+                connectedLock.readLock().unlock();
+            }
         }
 
         protected void messageConsumed(long newSeqIdConsumed) {
@@ -542,8 +574,16 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         }
 
         public void deliverNextMessage() {
+            connectedLock.readLock().lock();
+            try {
+                doDeliverNextMessage();
+            } finally {
+                connectedLock.readLock().unlock();
+            }
+        }
 
-            if (!isConnected()) {
+        private void doDeliverNextMessage() {
+            if (!connected) {
                 return;
             }
 
@@ -559,10 +599,41 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
 
             localSeqIdDeliveringNow = persistenceMgr.getSeqIdAfterSkipping(topic, lastLocalSeqIdDelivered, 1);
 
-            ScanRequest scanRequest = new ScanRequest(topic, localSeqIdDeliveringNow,
+            outstandingScanRequest = new ScanRequest(topic, localSeqIdDeliveringNow,
                     /* callback= */this, /* ctx= */null);
 
-            persistenceMgr.scanSingleMessage(scanRequest);
+            persistenceMgr.scanSingleMessage(outstandingScanRequest);
+        }
+
+        /**
+         * ===============================================================
+         * {@link CancelScanRequest} methods
+         *
+         * This method runs ins same threads with ScanCallback. When it runs,
+         * it checked whether it is outstanding scan request. if there is one,
+         * cancel it.
+         */
+        @Override
+        public ScanRequest getScanRequest() {
+            // no race between cancel request and scan callback
+            // the only race is between stopServing and deliverNextMessage
+            // deliverNextMessage would be executed in netty callback which is in netty thread
+            // stopServing is run in delivery thread. if stopServing runs before deliverNextMessage
+            // deliverNextMessage would have chance to put a stub in ReadAheadCache
+            // then we don't have any chance to cancel it.
+            // use connectedLock to avoid such race.
+            return outstandingScanRequest;
+        }
+
+        private boolean checkConnected() {
+            connectedLock.readLock().lock();
+            try {
+                // message scanned means the outstanding request is executed
+                outstandingScanRequest = null;
+                return connected;
+            } finally {
+                connectedLock.readLock().unlock();
+            }
         }
 
         /**
@@ -571,7 +642,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
          */
 
         public void messageScanned(Object ctx, Message message) {
-            if (!connected) {
+            if (!checkConnected()) {
                 return;
             }
 
@@ -597,7 +668,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         }
 
         public void scanFailed(Object ctx, Exception exception) {
-            if (!connected) {
+            if (!checkConnected()) {
                 return;
             }
 
@@ -606,7 +677,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
         }
 
         public void scanFinished(Object ctx, ReasonForFinish reason) {
-            // no-op
+            checkConnected();
         }
 
         /**
@@ -614,7 +685,7 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
          * {@link DeliveryCallback} methods
          */
         public void sendingFinished() {
-            if (!connected) {
+            if (!isConnected()) {
                 return;
             }
 
@@ -665,8 +736,10 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
                 subscriberStates.put(new TopicSubscriber(topic, subscriberId), this);
 
             if (prevSubscriber != null) {
-                stopServingSubscriber(prevSubscriber, SubscriptionEvent.SUBSCRIPTION_FORCED_CLOSED,
-                                      NOP_CALLBACK, null);
+                // we already in the delivery thread, we don't need to equeue a stop request
+                // just stop it now, since stop is not blocking operation.
+                // and also it cleans the old state of the active subscriber immediately.
+                doStopServingSubscriber(prevSubscriber, SubscriptionEvent.SUBSCRIPTION_FORCED_CLOSED);
             }
 
             lastSeqIdCommunicatedExternally = lastLocalSeqIdDelivered;
@@ -704,22 +777,34 @@ public class FIFODeliveryManager implements Runnable, DeliveryManager {
 
         @Override
         public void performRequest() {
-
-            // This will automatically stop delivery, and disconnect the channel
-            subscriber.setNotConnected(event);
-
-            // if the subscriber has moved on, a move request for its delivery
-            // pointer must be pending in the request queue. Note that the
-            // subscriber first changes its delivery pointer and then submits a
-            // request to move so this works.
-            removeDeliveryPtr(subscriber, subscriber.getLastSeqIdCommunicatedExternally(), //
-                              // isAbsenceOk=
-                              true,
-                              // pruneTopic=
-                              true);
+            doStopServingSubscriber(subscriber, event);
             cb.operationFinished(ctx, null);
         }
 
+    }
+
+    /**
+     * Stop serving a subscriber. This method should be called in a
+     * {@link DeliveryManagerRequest}.
+     *
+     * @param subscriber
+     *          Active Subscriber to stop
+     * @param event
+     *          Subscription Event for the stop reason
+     */
+    private void doStopServingSubscriber(ActiveSubscriberState subscriber, SubscriptionEvent event) {
+        // This will automatically stop delivery, and disconnect the channel
+        subscriber.setNotConnected(event);
+
+        // if the subscriber has moved on, a move request for its delivery
+        // pointer must be pending in the request queue. Note that the
+        // subscriber first changes its delivery pointer and then submits a
+        // request to move so this works.
+        removeDeliveryPtr(subscriber, subscriber.getLastSeqIdCommunicatedExternally(), //
+                          // isAbsenceOk=
+                          true,
+                          // pruneTopic=
+                          true);
     }
 
     protected class DeliveryPtrMove implements DeliveryManagerRequest {
