@@ -688,6 +688,41 @@ public class ReadAheadCache implements PersistenceManager, HedwigJMXService {
         }
     }
 
+    public class CancelScanRequestOp implements CacheRequest {
+
+        final CancelScanRequest request;
+
+        public CancelScanRequestOp(CancelScanRequest request) {
+            this.request = request;
+        }
+
+        public void performRequest() {
+            // cancel scan request
+            cancelScanRequest(request.getScanRequest());
+        }
+
+        void cancelScanRequest(ScanRequest request) {
+            if (null == request) {
+                // nothing to cancel
+                return;
+            }
+
+            CacheKey cacheKey = new CacheKey(request.getTopic(), request.getStartSeqId());
+            CacheValue cacheValue = cache.get(cacheKey);
+            if (null == cacheValue) {
+                // cache value is evicted
+                // so it's callback would be called, we don't need to worry about
+                // cancel it. since it was treated as executed.
+                return;
+            }
+            cacheValue.removeCallback(request.getCallback(), request.getCtx());
+        }
+    }
+
+    public void cancelScanRequest(ByteString topic, CancelScanRequest request) {
+        enqueueWithoutFailureByTopic(topic, new CancelScanRequestOp(request));
+    }
+
     protected class ScanResponse implements CacheRequest {
         CacheKey cacheKey;
         Message message;
